--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
         uses: google-github-actions/deploy-appengine@main
         with:
           
-          deliverables: habits_trainer/app.yaml
+          deliverables: app.yaml
           credentials: ${{ secrets.gcp_credentials }}
 
