modifying github workflow for although deploying cron.yaml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           credentials: ${{ secrets.gcp_credentials }}
 
       - name: Deploy an Cron Jobs
-        id: deploy-cron jobs
+        id: deploy-cron-jobs
         uses: google-github-actions/deploy-appengine@main
         with:
 
