--- a/cron.yaml
+++ b/cron.yaml
@@ -1,4 +1,4 @@
 cron:
   - description: "hourly notification job"
     url: /task/send_notifications
-    schedule: every 1 hours
+    schedule: every 5 mins
