openapi.yaml test

--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,5 @@
 # [START django_app]
+service: back-end
 runtime: python37
 handlers:
   # This configures Google App Engine to serve the files in the app's
