openapi.yaml test 3

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
   - name: "gcr.io/cloud-builders/gcloud"
     args: [ "app", "deploy" ]
+  - name: "gcr.io/cloud-builders/gcloud"
+    args: [ "endpoints", "service","deploy","./openapi.yaml" ]
 timeout: "1600s"
